# OWLIN-App

./: .api_invoice_2.json  .api_invoice_2_snippet.txt  .api_invoices_list.json  .backend_tail.txt  .cors_options.txt  .cursorignore  .db_last5_uploads.txt  .devlog_tail.txt  .editorconfig  .eslintignore  .gitattributes  .gitignore  .invoices_first200.txt  .invoices_headers.txt  .lint_top50.txt  .netstat_5173.txt  .nojekyll  .upload_response_test.gif.txt  .upload_response_test.jpg.txt  .upload_response_test.pdf.txt  .upload_response_test.png.txt  .upload_response_test.tiff.txt  ABSOLUTE_FINAL_COMMANDS.md  ACTIVATE_LLM_NOW.bat  ACTIVATE_LLM_NOW.ps1  ADDENDUM_IMPLEMENTATION_SUMMARY.md  ADDENDUM_INTEGRATION_GUIDE.md  ADVANCED_ANALYTICS_IMPLEMENTATION.md  ADVANCED_OCR_IMPLEMENTATION_COMPLETE.md  ADVANCED_OCR_IMPROVEMENTS_COMPLETE.md  ADVANCED_OCR_SYSTEM.md  AGENT_API_DOCUMENTATION.md  AGENT_API_IMPLEMENTATION_SUMMARY.md  AGENT_CONTEXT_PANEL_DOCUMENTATION.md  AGENT_CREDIT_SUGGESTION_SYSTEM_DOCUMENTATION.md  AGENT_ESCALATION_SYSTEM_DOCUMENTATION.md  AGENT_MEMORY_VERIFICATION.md  AGENT_ROUTER_IMPLEMENTATION.md  AGENT_SUPPLIER_SUMMARY_GENERATOR_DOCUMENTATION.md  AGENT_TIMEOUT_FIXES.md  (+711 more)
.cursor/: BBOX_EXTRACTION_FIX.md  CARD_DETECTION_INFINITE_LOOP_FIX.md  FRONTEND_CARD_DETECTION_FIX.md  FRONTEND_ERROR_STATUS_FIX.md  FRONTEND_POLLING_FIX.md  OCR_FIXES_APPLIED.md  OCR_TEST_SUCCESS.md  OWLIN_OCR_AUDIT_REPORT.md  OWLIN_OCR_RUNTIME_DEBUG.md
.github/: .cursorignore  .gitignore  .previewlog.txt  Backup-ANYWHERE.bat  Backup-Everything.bat  Backup-Everything.sh  Backup-NOW-super-simple.bat  Backup-Simple.bat  Backup-Working.bat  CODEOWNERS  CONFIDENCE_ROUTING_IMPLEMENTATION.md  CURSOR_BACKUP_PROMPT.md  DONUT_FALLBACK_IMPLEMENTATION_SUMMARY.md  FRONTEND_OCR_INTEGRATION.md  GAP_REPORT.md  HTR_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LAYOUT_DETECTION_IMPLEMENTATION.md  LLM_INTEGRATION_IMPLEMENTATION.md  LLM_INTEGRATION_IMPLEMENTATION_SUMMARY.md  NORMALIZATION_IMPLEMENTATION.md  NORMALIZATION_SUMMARY.md  OCR_PROCESSOR_IMPLEMENTATION.md  README_LAUNCHER.md  REQUIREMENTS_DIFF.md  SUPPLIER_TEMPLATE_LIBRARY_IMPLEMENTATION_SUMMARY.md  TABLE_EXTRACTION_IMPLEMENTATION.md  TROUBLESHOOTING.md  backup_script.ps1  check_db.py  demo_confidence_system.py  demo_llm_integration.py  env.example  fix_cursor_serialization.ps1  fix_cursor_simple.ps1  main.py  owlin-forensic-report-20251019-192200.md  performance_test.py  pull_request_template.md  pull_request_template.md.backup  (+15 more)
.husky/: pre-commit  pre-push
.venv311/: pyvenv.cfg
LICENSE/: PADDLEOCR_ATTRIBUTION.md  owlin.lic
THIRD_PARTY_LICENSES/: Llama-Community-License.txt  Qwen2.5-VL-LICENSE.txt  Surya-LICENSE.txt
app/: database.py  db_manager.py  db_migrations.py  enhanced_invoices_page.py  field_extractor.py  file_processor.py  forecast_page.py  invoice_upload_page.py  invoices_page.py  invoices_page_backup.py  invoices_page_backup2.py  invoices_page_backup_fix.py  invoices_page_simple.py  main.py  multi_upload_ui.py  notes_page.py  ocr_factory.py  ocr_monitoring.py  ocr_preprocessing.py  ocr_processing.py  settings_page.py  sidebar.py  streamlit_app.py  suppliers_page.py  theme.py  upload_validator.py
backend/: BRUTAL_DEBUG_STEPS.md  BRUTAL_IMPLEMENTATION_SUMMARY.md  INVOICE_API_FIXES_SUMMARY.md  INVOICE_API_TESTING.md  README.md  TABLE_PARSER_IMPROVEMENTS.md  __init__.py  advanced_multi_invoice_processor.py  advanced_ocr_processor.py  advanced_ocr_processor_simple.py  app.py  auto_start.ps1  batch_matcher.py  benchmark_results.json  brutal_verification.sh  check_audit.py  check_db_state.py  check_schema.py  check_tables.py  checks.py  config.py  config_core.py  config_units.py  contracts.py  contracts.py.backup  database.py  db.py  db_manager.py  db_manager_unified.py  diagnostics.py  final_single_port.py  full_system_test.py  generate_openapi.py  image_preprocess.py  intelligent_field_extractor.py  main.py  main_advanced.py  main_advanced_simple.py  main_fixed.py  main_fixed_backup.py  (+66 more)
components/: Layout.tsx  NavBar.tsx  NavigationDebugger.tsx  UploadGlass.tsx  supplier_scorecard.py
cpp_preprocessing/: CMakeLists.txt  README.md  main.cpp  preprocess_c_api.cpp  preprocess_c_api.h
cpp_preprocessing/api/: CMakeLists.txt  owlin_ocr_c_api.cpp  owlin_ocr_c_api.h  placeholder.cpp
cpp_preprocessing/include/: owlin_ocr.h
cpp_preprocessing/layout/: CMakeLists.txt  layout.cpp  layout.h  placeholder.cpp
cpp_preprocessing/postprocessing/: CMakeLists.txt  placeholder.cpp  postprocessing.cpp  postprocessing.h
cpp_preprocessing/preprocessing/: CMakeLists.txt  placeholder.cpp  preprocessing.cpp  preprocessing.h  tesseract_preprocessing.cpp  tesseract_preprocessing.h
cpp_preprocessing/recognition/: CMakeLists.txt  placeholder.cpp  recognition.cpp  recognition.h  recognition_c_api.cpp  recognition_c_api.h
cpp_preprocessing/segmentation/: CMakeLists.txt  line_segmentation.cpp  line_segmentation.h  segmentation.cpp  segmentation.h  segmentation_c_api.cpp  segmentation_c_api.h
cpp_preprocessing/tests/: CMakeLists.txt  placeholder.cpp  test_c_api.cpp  test_integration.cpp  test_preprocessing.cpp  test_python_ctypes.py  test_recognition.cpp  test_segmentation.cpp  test_tesseract_preprocessing.cpp
data/: device_fingerprint.txt  ocr_metrics.json  ocr_models_cache.txt  owlin.db  supplier_aliases.json
deploy/: owlin-vacuum.service  owlin-vacuum.timer  owlin.service
docs/: CODE_ASSISTANT_API.md  CURSOR_AGENT_MODE_LIMITATIONS.md  CURSOR_CONTINUE_EXTENSION.md  CURSOR_QWEN_QUICK_REF.md  CURSOR_QWEN_SETUP.md  CURSOR_QWEN_WORKFLOW.md  MODE_SELECTION_GUIDE.md  OPERATIONS.md  OWLIN_UI_DESIGN_CONTRACT.md  PERFORMANCE_TUNING.md  PRODUCTS_PAGE_SPEC.md  SLOS.md  harvest_checklist.md  (+2 more)
(+1376 files in other folders)
