[project]
name = "owlin"
version = "0.1.0"
description = "OWLIN Invoice Processing System"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
pythonpath = ["backend"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.110.*"
starlette = "0.37.*"
httpx = "0.27.*"
pytest = "8.*" 